# archr

./: .gitignore  Cargo.toml  README.ja.md  README.md  THIRD-PARTY-LICENSES.html  about.toml
locales/: en.yml  ja.yml
src/: main.rs
src/extractors/: bzip2_extractor.rs  common.rs  gzip_extractor.rs  lha_extractor.rs  mod.rs  rar_extractor.rs  sevenz_extractor.rs  tar_extractor.rs  xz_extractor.rs  zip_extractor.rs
