[package]
name = "decomp"
version = "0.1.1"
edition = "2021"

[dependencies]
zip = "0.6"
sevenz-rust = "0.6"
unrar = "0.5"
tar = "0.4"
flate2 = "1.0"
xz2 = "0.1"
bzip2 = "0.4"
encoding_rs = "0.8"
indicatif = "0.17"
walkdir = "2.4"
clap = { version = "4.4", features = ["derive"] }
rfd = "0.14"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
env_logger = "0.10"
log = "0.4"
rust-i18n = "3"
delharc = "0.6.1"
