[package]
name = "archr"
version = "0.2.0"
edition = "2021"
description = "macOS-like Archive Extractor"
license = "MIT"
repository = "https://github.com/ulalume/archr"
readme = "README.md"
keywords = ["cli", "extract", "unarchive", "unzip"]
categories = ["command-line-utilities"]
exclude = ["/target", ".github"]

[dependencies]
zip = "0.6"
sevenz-rust = "0.6"
unrar = "0.5"
tar = "0.4"
flate2 = "1.0"
xz2 = "0.1.7"
bzip2 = "0.6.0"
encoding_rs = "0.8"
indicatif = "0.18.0"
walkdir = "2.4"
clap = { version = "4.4", features = ["derive"] }
rfd = "0.15.4"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
env_logger = "0.11.8"
log = "0.4"
rust-i18n = "3"
delharc = "0.6.1"
